# geopy

./: .gitignore  Cargo.toml  FEATURES.md  pyproject.toml
.cargo/: config.toml
geopy/: __init__.py  spatial.py  stats.py  tools.py
src/: conv.rs  lib.rs  spatial.rs  stats.rs  types.rs
src/pybridge/: classes.rs  extract.rs  mod.rs  spatial.rs  stats.rs
test/: test_patch_counter.py  test_zonal.py
test/data/: slope_int.tif  县级边界.dbf  县级边界.sbn  县级边界.sbx  县级边界.shp.xml  县级边界.shx
