[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "geopy"
version = "0.1.0"
requires-python = ">=3.8"
description = "A Python + Rust hybrid project"
authors = [
    {name = "Your Name"},
]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "geopy._core"